// Copyright 2022 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package netsim;

// Chip Controller statistics for a netsim session.
message NetsimChipStats {
  // The kind of chip controller
  enum Kind {
    UNSPECIFIED = 0;
    BLUETOOTH = 1;
    BLE_BEACON = 2;
    WIFI = 3;
    UWB = 4;
    NFC = 5;
  }
  optional Kind kind = 1;
  // The duration of the controller connection
  optional int32 duration_secs = 2;
  // TX/RX HostToController and ControllerToHost
  optional int32 tx_count = 3;
  optional int32 rx_count = 4;
}

// Statistics for a netsim session.
message NetsimStats {
  // The length of the session in seconds
  optional int32 duration_secs = 1;
  // The total number of devices that connected
  optional int32 device_count = 2;
  // The peak number of concurrent devices connected
  optional int32 peak_concurrent_devices = 3;
  // Individual chip statistics
  repeated NetsimChipStats chip_stats = 4;
}
